# construct

./: .antigravityignore  .gitignore  Cargo.toml  README.md  config_example.yaml  investigation.rs  timeout.rs
construct/: MESSAGE_SYSTEM_IMPLEMENTATION.md  test_zai.md
prompts/: architect.md  assistant.md  context.md  conversational.md  developer.md  new_project.md  tools.md
res/: strings.yaml
src/: admin.rs  bridge.rs  commands.rs  config.rs  feed.rs  main.rs  message_helper.rs  project_state.rs  prompts.rs  sandbox.rs  state.rs  strings.rs  util.rs  wizard.rs
src/agent/: adapter.rs  discovery.rs  factory.rs  mod.rs  rate_limiter.rs
src/agent/providers/: anthropic.rs  deepai.rs  gemini.rs  groq.rs  mod.rs  openai.rs  xai.rs  zai.rs
src/application/: engine.rs  feed.rs  feed_formatter.rs  logging.rs  mod.rs  parsing.rs  project.rs  router.rs  state.rs  thought_cleaner.rs  utils.rs
src/commands/: admin.rs  agent.rs  build.rs  core.rs  git.rs  mod.rs  project.rs  system.rs  wizard.rs
src/core/: bridge.rs  config.rs  feed.rs  feed_utils.rs  mod.rs  project.rs  state.rs  utils.rs
src/core/features/: feed.rs
src/core/state/: mod.rs  project.rs
src/core/utils/: feed_helper.rs  mod.rs
src/domain/: config.rs  mod.rs  paths.rs  traits.rs  types.rs
src/features/: feed.rs
src/infrastructure/: matrix.rs  mod.rs
src/infrastructure/llm/: README.md  client.rs  mod.rs  types.rs
src/infrastructure/llm/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src/infrastructure/mcp/: client.rs  mod.rs  tools.rs
src/infrastructure/tools/: executor.rs  mod.rs
src/infrastructure/tui/: app.rs  logging.rs  mod.rs  service.rs
src/interface/: mod.rs
src/interface/commands/: admin.rs  agent.rs  help.rs  misc.rs  mod.rs  new.rs  project.rs  start.rs  task.rs  wizard.rs
src/llm/: client.rs  mod.rs  types.rs
src/llm/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src/mcp/: client.rs  manager.rs  mod.rs
src/patterns/: flutter.rs  generic.rs  go.rs  mod.rs  nodejs.rs  python.rs  rust.rs
src/services/: matrix.rs  message_helper.rs  mod.rs
src/state/: mod.rs  project.rs
src/strings/: help.rs  logs.rs  messages.rs  mod.rs  prompts.rs  templates.rs  wizard.rs
src/utils/: common.rs  feed_helper.rs  mod.rs  sandbox.rs
templates/: architecture.md  guidelines.md  plan.md  progress.md  request.md  roadmap.md  tasks.md  walkthrough.md
