[package]
name = "construct"
version = "0.1.0"
edition = "2024"
default-run = "construct"

[dependencies]
matrix-sdk = { version = "0.16", features = ["markdown"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
async-trait = "0.1.89"
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
rust-mcp-filesystem = { git = "https://github.com/rust-mcp-stack/rust-mcp-filesystem.git", default-features = false }

[features]
default = []

[dev-dependencies]
tempfile = "3.14"

[[bin]]
name = "construct"
path = "src/main.rs"

[[bin]]
name = "rust-mcp-filesystem"
path = "src/bin/rust-mcp-filesystem.rs"
