[package]
name = "construct"
version = "0.1.0"
edition = "2024"
default-run = "construct"

[dependencies]
matrix-sdk = { version = "0.16", features = ["markdown"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
async-trait = "0.1.89"
reqwest = { version = "0.11", features = ["json", "stream"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
regex = "1.12.2"
tracing-appender = "0.2.4"


[features]
default = []

[dev-dependencies]
tempfile = "3.14"

[[bin]]
name = "construct"
path = "src/main.rs"


